Updated styles for MyBookmark, made rightbuttons recycebles, updated icon for sign in, sign up on insideaccount sidemenu, adjusted header alignments

--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 30px;
+    padding-inline: 80px;
     box-sizing: border-box;
     margin-top: 40px;
     height: 120px;
