--- a/frontend/src/components/LandlordProfile.module.css
+++ b/frontend/src/components/LandlordProfile.module.css
@@ -45,8 +45,8 @@
 
 /* Middle Icon */
 .middle-icon {
-    width: 20%;
-    height: 20%;
+    width: 250px;
+    height: 250px;
     /*flex-shrink: 0;*/
     position: relative;
     left:20px;
@@ -66,7 +66,7 @@
     padding: 20px;
     color: #4D55A4;
     box-sizing: border-box;
-    height: 300px;
+    height: 250px;
     position: relative;
     top:5px;
 }
@@ -203,7 +203,7 @@
     background-color: transparent;
     border: none;
     position: relative;
-    top:-30px;
+    top:-60px;
     left:20px;
     
 }
@@ -217,7 +217,7 @@
     background-color: transparent;
     border: none;
     position: relative;
-    top:-30px;
+    top:-60px;
     left:100px;
  
     
@@ -225,7 +225,7 @@
 
 .green-button img,
 .red-button img {
-    width: 200px;
+    width: 190px;
     height: auto;
     display: block;
 }
@@ -247,7 +247,7 @@
     flex-direction: column;
     gap: 10px;
     max-width: 600px;
-    height: 300px;
+    height: 250px;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
@@ -261,7 +261,9 @@
     display: flex;
     align-items: center;
     padding: 5px 0;
-    gap:10px;
+    gap:5px;
+    position: relative;
+    top: -15px;
 
 }
 
@@ -287,7 +289,7 @@
 /* Rating Bars */
 .rating-bar {
     width: 100%;
-    height:20px;
+    height:30px;
    
     background-color: #d3d3d3; /* Grey background */
     
@@ -295,7 +297,7 @@
     overflow: hidden;
     position: relative;
     border-radius: 5px;
-    left:15px;
+    left:10px;
     
     
 }
@@ -499,15 +501,17 @@
 .helpful-container {
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap:10px;
     font-family: Helvetica;
     color: #4D55A5;
-    font-size: 1rem;
+    font-size: 1.8rem;
+    position: relative;
+    top: -40px;
 }
 
 .thumb-icon {
-    width: 30px;
-    height: 30px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
 }
 
@@ -582,6 +586,7 @@
     position: relative;
     top:20px;
     left:40px;
+
     
 }
 /* Select Dropdown */
@@ -590,7 +595,7 @@
     height: 30px; /* Adjust height of dropdown */
     font-size: 1.1rem; /* Adjust font size for the dropdown */
     padding: 5px;
-    border-radius: 5px; /* Rounded corners */
+    border-radius: 15px; /* Rounded corners */
     border: 1px solid #ccc; /* Border styling */
     background-color: white; /* Background color */
     color: #333; /* Text color */
