--- a/frontend/src/components/LandlordProfile.module.css
+++ b/frontend/src/components/LandlordProfile.module.css
@@ -535,13 +535,14 @@
     background-color: #FFFFFF;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+   
     border-radius: 10px;
     position: relative;
     top:-120px;
-    height: 300px;
-    align-content:space-around;
+    height: 290px;
+    align-content:start;
     padding: 10px;
+    gap: 5px;
     
 }
 
@@ -555,7 +556,7 @@
     font-weight: bold;
     color: black;
     border-radius: 10px;
-    height: 60px;
+    height: 80px;
     width: 100px;
     text-align: center;
     padding: 5px;
@@ -563,7 +564,7 @@
 
 .green {
     background-color: #92C740;
-    border-radius: 5px;
+    
 }
 .gray{
     background-color: #CACACA;
