--- a/frontend/src/components/LandlordProfile.module.css
+++ b/frontend/src/components/LandlordProfile.module.css
@@ -7,9 +7,9 @@
 }
 
 @font-face {
-    font-family: 'Helvetica-Bold';
+    font-family: 'Helvetica';
     src: url('../fonts/helvetica-bold.woff') format('woff');
-    font-weight: normal;
+    font-weight: bold;
     font-style: normal;
 }
 
@@ -19,7 +19,6 @@
     min-height: 100vh;
     padding: 2vw;
     display: flex;
-    padding-top: 80px;
     flex-direction: column;
     color: white;
     box-sizing: border-box;
@@ -32,43 +31,33 @@
 /* Landlord Information Section */
 .landlord-info {
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between; /* Ensures even spacing */
-    gap: 20px;
-    margin: 0 auto; /* Centers the content */
+    justify-content: space-between;
     max-width: 100%; /* Matches the full-width layout */
     width: 100%; /* Ensures responsiveness */
-    padding: 20px;
     box-sizing: border-box;
+    padding-inline: 30px;
 }
 
 
 /* Middle Icon */
 .middle-icon {
-    width: 250px;
-    height: 250px;
-    /*flex-shrink: 0;*/
-    position: relative;
-    left:20px;
-    top: 15px;
+    width: auto;
+    height: 260px;
 }
 
 /* Landlord Information */
 .landlord-information {
-    
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 600px;  /*Ensures it aligns with rating-summary */
-    padding: 20px;
+    max-width: 630px;  /*Ensures it aligns with rating-summary */
+    padding: 30px;
     color: #4D55A4;
     box-sizing: border-box;
-    height: 250px;
+    height: 260px;
     position: relative;
-    top:5px;
 }
 
 .landlord-details {
@@ -76,10 +65,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-bottom: 10px;
     width: 190px;
-    
-   
 }
 
 .rating-box {
@@ -104,8 +90,7 @@
     margin: 0; /* Remove any default margins */
     line-height: 3; /* Ensure single line spacing */
     width: 140px; /* Explicit width */
-    height: 150px; /* Explicit height */
-  
+    height: 140px; /* Explicit height */
 }
 
 
@@ -114,7 +99,7 @@
     font-weight: bold;
     color: #4D55A4;
     position: relative;
-    left: 10px;
+
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -128,7 +113,7 @@
     margin-top: 5px;
     position: relative;
     top: -50px;
-    left:10px;
+
 }
 .landlord-report-icon{
     cursor: pointer;
@@ -205,8 +190,8 @@
     position: relative;
     top:-60px;
     left:20px;
-    
 }
+
 /*This is add a property*/
 .red-button {
     display: flex;
@@ -233,8 +218,8 @@
 .red-text,
 .green-text {
     position: absolute;
-    font-family: Helvetica;
-    font-size: 12px;
+    font-weight: bold;
+    font-size: 18px;
     color: white;
     text-align: center;
     pointer-events: none;
@@ -247,24 +232,21 @@
     flex-direction: column;
     gap: 10px;
     max-width: 600px;
-    height: 250px;
+    height: 260px;
     background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
     box-sizing: border-box;
     position: relative;
-    left: -10px;
-    top:5px;
 }
 
 .rating-item {
     display: flex;
     align-items: center;
-    padding: 5px 0;
+    padding: 5px 10px;
     gap:5px;
     position: relative;
-    top: -15px;
-
+    top: -10px;
 }
 
 .rating-face {
