--- a/frontend/src/components/LandlordProfile.module.css
+++ b/frontend/src/components/LandlordProfile.module.css
@@ -260,7 +260,7 @@
 .rating-item {
     display: flex;
     align-items: center;
-    padding: 5px 0;
+    padding: 5px 20px;
     gap:5px;
     position: relative;
     top: -15px;
@@ -272,7 +272,6 @@
     height: 30px;
     margin-right: 10px;
     flex-shrink: 0;
-   
 
 }
 
@@ -375,35 +374,35 @@
     color: black;
     font-weight: bold;
     margin-bottom: 10px;
-    
     flex-shrink: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    
 }
 
 .score-text {
     
     color: #4D55A5;
-    font-size: 4.5rem;
+    font-size: 6.5rem;
     font-weight: bold;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
     text-align: center;
     width: 190px;
     height: 120px;
     position: relative;
     top:-70px;
-    left:5px;
+    left:5px; 
 }
+
 .landlord-five-score{
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     position: relative;
     top:-45px;
     left:-70px;
 }
+
 .score-1{
     background-color: #EE5354;
     color:black;
@@ -536,12 +535,12 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     position: relative;
-    top:-120px;
+    top:-180px;
     height: 300px;
     align-content:space-around;
-    padding: 10px;
+    padding: 0px;
     
 }
 
@@ -554,9 +553,9 @@
     justify-content: center;
     font-weight: bold;
     color: black;
-    border-radius: 10px;
-    height: 60px;
-    width: 100px;
+    border-radius: 20px;
+    height: 80px;
+    width: 120px;
     text-align: center;
     padding: 5px;
 }
