--- a/frontend/src/components/RightButtons.module.css
+++ b/frontend/src/components/RightButtons.module.css
@@ -26,3 +26,20 @@
     width: auto;
     height: 65px;
 }
+.account-button-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.signed-in-indicator {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 10px;
+    height: 10px;
+    background-color: green;
+    border-radius: 50%;
+    border: 2px solid white;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+}
+
