--- a/frontend/src/components/ReportProblem.module.css
+++ b/frontend/src/components/ReportProblem.module.css
@@ -100,17 +100,20 @@ body {
 .report-problem-textarea {
     width: 100%;
     height: 100px;
-    padding-top: 10px;
+    padding:20px;
     border-radius: 5px;
     border: 1px solid #ddd;
+    box-sizing: border-box;  
     font-size: 14px;
-    margin-top: 5px;
 }
+
+
 
 .char-count {
     font-size: 12px;
     color: #fff;
     text-align: right;
+    padding-bottom: 5px;
 }
 
 /* Submit button */
